@@ -22,7 +22,6 @@ LDAP_BEGIN_DECL
 
 extern BI_init		perl_back_initialize;
 
-extern BI_open		perl_back_open;
 extern BI_close		perl_back_close;
 
 extern BI_db_init	perl_back_db_init;
